<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    
	<ScrollView
	    android:layout_width="match_parent"
		android:paddingTop="15dp"            	
		android:paddingBottom="15dp"            	
	    android:layout_height="wrap_content" >
		 <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:orientation="vertical">   	    
			<TextView android:text = "@string/description"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>                    	
			<TextView android:text = "@string/to_use"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"	             	          
			    android:textColor="#ff000000"
			    android:paddingTop="15dp"            	
			    android:textAppearance="?android:attr/textAppearanceMedium"/>              
			<TextView android:text = "@string/create_profile"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>              
			<TextView android:text = "@string/turn_on_app"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>              
			<TextView android:text = "@string/turn_on_launcher"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="#ff000000"/>              
			<TextView android:text = "@string/launcher_settings"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>              
			<TextView android:text = "@string/select_app"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>              
			<TextView android:text = "@string/tap_back"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>              
			<TextView android:text = "@string/tap_profile"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>    
			<TextView android:text = "@string/log_in"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>              
			<TextView android:text = "@string/select_launcher"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
			    android:textAppearance="?android:attr/textAppearanceMedium"/>
			<TextView android:text = "@string/note_that"
				android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textColor="#ff000000"
				android:paddingTop="10dp"            	
			    android:textAppearance="?android:attr/textAppearanceMedium"/>
		</LinearLayout>
	</ScrollView>
			              
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
    	android:layout_gravity="bottom"
    	android:orientation="vertical" >
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@android:color/darker_gray"/>   
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" 
	    	android:orientation="horizontal" 
	    	style="?android:attr/buttonBarStyle">
	        <Button 
	            android:id="@+id/exitAboutButton"
		        style="?android:attr/buttonBarButtonStyle"
	            android:text="@string/close"
	        	android:layout_weight="1"
	            android:layout_width="0dp" 
				android:layout_height="wrap_content"
				android:onClick="helpDoClick"
	            android:gravity="center"
	            android:layout_gravity="center"  />
	    </LinearLayout>	    
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@android:color/darker_gray"/>   
	    	</LinearLayout>   
</LinearLayout>
