<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:padding="10dp"
		android:src="@drawable/blueverdi400" />            
	<TextView android:text = "@string/app_name"
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:paddingTop="15dp"            	
		android:layout_gravity="center_horizontal"
	    android:textColor="#ff000000"
	    android:textAppearance="?android:attr/textAppearanceLarge"/>                    	
	<TextView android:text = "@string/version"
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"	             	          
	    android:textColor="#ff000000"
	    android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_gravity="center_horizontal"/>              
	<TextView android:text = "@string/copyright"
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:textColor="#ff000000"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_gravity="center_horizontal"/>              
	<TextView android:text = "@string/allrights"
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:textColor="#ff000000"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_gravity="center_horizontal"/>              
	<TextView android:text = "@string/created"
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="#ff000000"
	    android:layout_gravity="center_horizontal"/>              
	<TextView android:text = "@string/for_support"
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:textColor="#ff000000"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_gravity="center_horizontal"/>              
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
    	android:layout_gravity="bottom"
    	android:orientation="vertical" >
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@android:color/darker_gray"/>   
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" 
	    	android:orientation="horizontal" 
	    	style="?android:attr/buttonBarStyle">
	        <Button 
	            android:id="@+id/exitAboutButton"
		        style="?android:attr/buttonBarButtonStyle"
	            android:text="@string/close"
	        	android:layout_weight="1"
	            android:layout_width="0dp" 
				android:layout_height="wrap_content"
				android:onClick="aboutDoClick"
	            android:gravity="center"
	            android:layout_gravity="center"  />
	    </LinearLayout>	    
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@android:color/darker_gray"/>   
	    	</LinearLayout>   
</LinearLayout>
