<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dip"
    android:orientation="vertical"
    android:background="@drawable/myshape" >

    <TextView
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:layout_margin="4dip"
        android:textColor="@android:color/white"
        android:text="@string/app_name" >
    </TextView>
   <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:layout_margin="4dip"
		android:textColor="@android:color/white"        
		android:text="@string/description" >
    </TextView>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" 
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
		   <TextView
		        style="@android:style/TextAppearance.Medium"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:layout_gravity="right"
		        android:layout_marginRight="4dip"
		        android:text="@string/status" >
		    </TextView>
		   <TextView
   				android:id="@+id/status"
		        style="@android:style/TextAppearance.Medium"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:layout_gravity="left">
		    </TextView>
		</TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
		   <TextView
		        style="@android:style/TextAppearance.Medium"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="right"
		        android:layout_marginRight="4dip"
		        android:textColor="@android:color/white"
		        android:text="@string/autorun_package" >
		    </TextView>
		   <TextView
   				android:id="@+id/autorun_package"
		        style="@android:style/TextAppearance.Medium"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:layout_gravity="left">
		    </TextView>
           		   
        </TableRow>

     </TableLayout>
   
</LinearLayout> 
