<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_to_run" 
            android:textSize="24sp"
            android:paddingRight="10dp"/>

        <Spinner
            android:id="@+id/spinner1"
            android:prompt="@string/please_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	android:paddingBottom="5dp"
    	android:paddingTop="20dp"
		android:layout_gravity="bottom">
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@android:color/black"/>   
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	    	android:orientation="horizontal" 
	    	style="?android:attr/buttonBarStyle">
		    <Button
		        android:id="@+id/cancelButton"
		        style="?android:attr/buttonBarButtonStyle"
		        android:layout_height="wrap_content"
	       		android:layout_width="0dp"
	        	android:layout_weight="1"
			    android:onClick="configureDoClick"
		        android:text="@string/cancel" />
	    </LinearLayout>	    
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@android:color/black"/>   
	    	</LinearLayout>
    	
</LinearLayout>